name:              twitter-conduit
version:           0.1.0
license:           BSD3
license-file:      LICENSE
author:            Hideyuki Tanaka, Takahiro HIMURA
maintainer:        Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
synopsis:          Twitter API package with conduit interface and Streaming API support.
description:       This package uses conduit package for access Twitter API.
category:          Web, Conduit
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://github.com/tanakh/twitter-conduit

source-repository head
  type: git
  location: git://github.com/tanakh/twitter-conduit.git

library
  build-depends:   base               == 4.5.*
                 , mtl                == 2.1.*
                 , transformers       == 0.3.*
                 , transformers-base  == 0.4.*
                 , conduit            == 0.5.*
                 , resourcet
                 , attoparsec         >= 0.10
                 , attoparsec-conduit
                 , authenticate-oauth >= 1.4
                 , aeson              >= 0.6
                 , http-types
                 , http-conduit       >= 1.5
                 , bytestring         >= 0.9
                 , text               >= 0.10
                 , containers         >= 0.4
                 , directory
                 , filepath
                 , case-insensitive
                 , network
                 , monad-control
                 , data-default

  exposed-modules: Web.Twitter
                   Web.Twitter.Api
                   Web.Twitter.Fetch
                   Web.Twitter.Monad
                   Web.Twitter.Post
                   Web.Twitter.Query
                   Web.Twitter.Stream
                   Web.Twitter.Status
                   Web.Twitter.Types

  other-modules:   Web.Twitter.Utils
                   Common

  ghc-options:     -Wall

executable oslist
  main-is:         oslist.hs
  hs-source-dirs:  sample

  ghc-options:     -Wall

  build-depends:   base
                 , twitter-conduit

  other-modules:   Common

executable userstream
  main-is:         userstream.hs
  hs-source-dirs:  sample

  ghc-options:     -Wall

  build-depends:   base
                 , mtl
                 , containers
                 , conduit
                 , directory
                 , filepath
                 , attoparsec
                 , bytestring
                 , case-insensitive
                 , aeson
                 , http-conduit
                 , network
                 , authenticate-oauth
                 , twitter-conduit
